<resources>
    <string name="app_name">Sejong Hangugeo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="slovo">Слово</string>
    <string name="perevod">Перевод</string>
    <string name="dobavit_noviy_termin">Новый термин:</string>
    <string name="uchebnik_kursa">учебник курса</string>
    <string name="grammatika">грамматика</string>
    <string name="uchebnie_moduli">учебные модули</string>
    <string name="redaktirovanie">Редактирование</string>
    <string name="unlearn">Неизученно</string>
    <string name="learning">Изученно</string>
    <string name="learned">Усвоено</string>
    <string name="next_round">Следующий раунд</string>
    <string name="title_activity_test">TestActivity</string>
    <!--for mail dialog -->
    <string name="your_mail">Ваш mail</string>
    <string name="massage_title">Тема сообщения</string>
    <string name="massage_body">Текст сообщения</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="app_mail">appmailsejong@gmail.com</string>
    <string name="app_mail_pass">kanoxa94</string>
    <string name="app_mail_outbox">flymr92@gmail.com</string>
    <string name="send_success">Ваше сообщение доставленно</string>
    <string name="send_error">Ошибка. Нет подключения к интернету</string>
    <string name="sending">Сообщение отправляется...</string>
    <string name="send_massage">Отправить сообщение</string>
    <!-- legends -->
    <string name="culture">Культура</string>
    <string name="category">Категория: %s</string>
    <string name="show_other">Смотреть другие</string>
    <!-- mainActivity -->
    <string name="share">Поделиться</string>
    <string name="sejongHangugeo1">세종한국어 1</string>
    <string name="ikhimchek">익힘책</string>
    <string name="instruction">Руководство</string>
    <string name="last_places">Последнии места</string>
    <string name="thems">Темы</string>
    <string name="favorites">Благодарности</string>
    <string name="preview">Превью</string>
    <string name="feedback">Обратная связь</string>
    <string name="day">День</string>
    <string name="night">Ночь</string>
    <string name="auto">Авто</string>
    <string name="thanks_to">Благодарности</string>
    <string name="setting">Настройки</string>
    <string name="havent_tts">Не установлен TTS</string>
    <string name="go_to_tts_setting">Необходимо установить TTS для корейского языка. Перейти в настройки?</string>
    <string name="folder_dont_crate">Папка не существует</string>
    <string name="last_page_of">(стр. %d)</string>
    <string name="error_connection">Ошибка соединения</string>
    <string name="home_page">https://github.com/flymr/SejongHangugeo</string>
    <string name="delete_lesson">Удалить %s?</string>
    <string name="still_unready">Еще не готово :(</string>

    <!-- lessons -->
    <string name="add_to_folder">Добавить в папку</string>
    <string name="new_folder">Новая папка</string>
   <string name="delete">Удалить</string>
    <string name="firstly_add_words">Сначала добавте слова</string>

    <!--book, listening, test etg -->
    <string name="listeningTask0">Выберите правильный вариант</string>
    <string name="listeningTask1">Выберите правильные варианты</string>
    <string name="listeningTask2">Укажите правильную последовательность</string>
    <string name="listeningTask3">Напишите правильный ответ</string>
    <string name="add_answer">Принять ответ</string>
    <string name="write_answer">Напишите ответ</string>
    <string name="titki">듣고 말하기</string>
    <string name="close">Закрыть</string>
    <string name="next">Слудующий</string>
    <string name="prev">Предыдущий</string>
    <string name="listening_text">Текст Диалога</string>
    <string name="yonsip">연 습</string>
    <string name="add_all">Добавить все</string>
    <string name="uncorrect_sequence">Последовательность неполная</string>
    <string name="right">Верно</string>
    <string name="wrong">Неверно</string>
    <string name="search_in_dictionary">Поиск в словаре</string>

    <!-- learn final result -->
    <string name="all_words">Все слова</string>
    <string name="words_with_error">Слова с ошибками</string>
    <string name="favorites_words">Избранное</string>

    <!-- learn result -->
    <string name="error_count">Ошибок сделанно: </string>



</resources>
