<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/il_user_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="true"
        android:layout_marginTop="20dp"
        android:hint="@string/your_mail"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_mail_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textEmailAddress"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="true"
        android:hint="@string/massage_title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/massage_header_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="text"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="true"
        android:hint="@string/massage_body"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/massage_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textMultiLine"
            />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>