<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/learn_final_ll"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Учить заново:" />

        <android.support.v7.widget.CardView
            android:id="@+id/repeat_all_words"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="-10dp"

            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            >

            <TextView
                android:id="@+id/all_rep_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_words"
                android:textColor="@color/white"
                android:layout_gravity="center"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/repeat_error_words"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="-10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"

            android:focusable="true"
            >

            <TextView
                android:id="@+id/error_rep_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/words_with_error"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="7dp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/repeat_selected_words"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"

            android:layout_marginLeft="-10dp"

            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardUseCompatPadding="true"

            android:focusable="true"
            >
            <TextView
                android:id="@+id/selected_rep_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/favorites_words"
                />


        </android.support.v7.widget.CardView>
    </LinearLayout>
    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/arc_progress"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        custom:arc_text_color="@color/textColor"
        custom:arc_finished_color="@color/green"
        custom:arc_unfinished_color="@color/redM"
        custom:arc_bottom_text="РЕЗУЛЬТАТ"
        android:layout_gravity="center"/>
</LinearLayout>