<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_learn_result"

    >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:id="@+id/ll_learn_result"
       android:baselineAligned="false"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="10dp">
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:orientation="vertical"
           android:gravity="center">
           <TextView
               android:id="@+id/tv_unlearned"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="17sp"
               android:text="0"/>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center">
               <android.support.v7.widget.AppCompatImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_circle_gray"/>
               <android.support.v7.widget.AppCompatImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_circle_gray"
                   />
           </LinearLayout>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="13sp"
               android:text="@string/unlearn"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:orientation="vertical"
           android:gravity="center">
           <TextView
               android:id="@+id/tv_learning"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="17sp"
               android:text="0"/>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center">
               <android.support.v7.widget.AppCompatImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_circle_gray"
                   app:tint="@color/green"/>
               <android.support.v7.widget.AppCompatImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_circle_gray"
                   />
           </LinearLayout>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="13sp"
               android:text="@string/learning"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:orientation="vertical"
           android:gravity="center">

           <TextView
               android:id="@+id/tv_learned"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="17sp"
               android:text="0"/>
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:gravity="center">
               <android.support.v7.widget.AppCompatImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_circle_gray"
                   app:tint="@color/green"/>
               <android.support.v7.widget.AppCompatImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_circle_gray"
                   app:tint="@color/green"
                   />
           </LinearLayout>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="13sp"
               android:text="@string/learned"/>
       </LinearLayout>

   </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/learn_next_round"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/md_purple"
        android:layout_below="@+id/ll_learn_result">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_round"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_learn_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/learn_next_round"
        >

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>